feat: scholarship added and courses redesign

--- a/bootcamp/templates/bootcamp/base.html
+++ b/bootcamp/templates/bootcamp/base.html
@@ -37,7 +37,7 @@
   </script>
   <!-- Google analytics end -->
     </head>
-  <body>
+  <body {% block course-container %} {% endblock course-container %}>
     
     {% block mentors %}
     
