refac: mentors page editted

--- a/bootcamp/templates/bootcamp/mentors.html
+++ b/bootcamp/templates/bootcamp/mentors.html
@@ -29,24 +29,24 @@
             <img src="{% static 'bootcamp/assets/mentors-trophy.png' %}" class="wow fadeInLeft"/>
             <div class="showcase-card-text-top">Technical Expertise</div>
             <div class="showcase-card-text-bottom">
-              <div class="showcase-card-text-bottom-head">Body</div>
-              <div class="showcase-card-text-bottom-head">Regular 14pt</div>
+              <div class="showcase-card-text-bottom-head">Technical skills, knowledge sharing</div>
+              <div class="showcase-card-text-bottom-head">skills, portfolios, professional experience.</div>
             </div>
           </div>
           <div class="showcase-card">
             <img src="{% static 'bootcamp/assets/mentors-monitor.png' %}" class="wow bounce" />
-            <div class="showcase-card-text-top">Technical Expertise</div>
+            <div class="showcase-card-text-top">Skype Interview</div>
             <div class="showcase-card-text-bottom">
-              <div class="showcase-card-text-bottom-head">Body</div>
-              <div class="showcase-card-text-bottom-head">Regular 14pt</div>
+              <div class="showcase-card-text-bottom-head">We conduct a technical interview</div>
+              <div class="showcase-card-text-bottom-head">with our ninjas over skype.</div>
             </div>
           </div>
           <div class="showcase-card">
             <img src="{% static 'bootcamp/assets/mentors-handshake.png' %}" class="wow fadeInRight"/>
             <div class="showcase-card-text-top">Technical Expertise</div>
             <div class="showcase-card-text-bottom">
-              <div class="showcase-card-text-bottom-head">Body</div>
-              <div class="showcase-card-text-bottom-head">Regular 14pt</div>
+              <div class="showcase-card-text-bottom-head">Review on clean code, best</div>
+              <div class="showcase-card-text-bottom-head">practices, design patterns, test cases, git, peer review.</div>
             </div>
           </div>
         </div>
