refac: text edited

--- a/bootcamp/templates/bootcamp/mentors.html
+++ b/bootcamp/templates/bootcamp/mentors.html
@@ -43,7 +43,7 @@
           </div>
           <div class="showcase-card">
             <img src="{% static 'bootcamp/assets/mentors-handshake.png' %}" class="wow fadeInRight"/>
-            <div class="showcase-card-text-top">Technical Expertise</div>
+            <div class="showcase-card-text-top">Mock Test</div>
             <div class="showcase-card-text-bottom">
               <div class="showcase-card-text-bottom-head">Review on clean code, best</div>
               <div class="showcase-card-text-bottom-head">practices, design patterns, test cases, git, peer review.</div>
