--- a/bootcamp/templates/bootcamp/base.html
+++ b/bootcamp/templates/bootcamp/base.html
@@ -70,6 +70,9 @@
             <li class="navlist">
               <a href="{% url 'contact' %}" class="navlink {% if request.path == '/contact' %} nav-active {% endif %}">Contact</a>
             </li>
+            <li class="navlist">
+              <a href="{% url 'scholarship' %}" class="navlink {% if request.path == '/scholarship' %} nav-active {% endif %}">Scholarship</a>
+            </li>
             <li class="unset-nav">
               <a href="{% url 'enroll' %}" class="navlink-Enroll"> Enroll</a>
             </li>
