--- a/bootcamp/templates/bootcamp/about.html
+++ b/bootcamp/templates/bootcamp/about.html
@@ -69,7 +69,7 @@
       <div class="AboutUs-title">About Us</div>
       <div class="aboutus-text-container-main">
         <div class="aboutus-text-container">
-          {{about_content.description}}
+          <p>{{about_content.description}}</p>
         </div>
       </div>
       <div class="aboutus-grids-container">
