--- a/bootcamp/templates/bootcamp/courses.html
+++ b/bootcamp/templates/bootcamp/courses.html
@@ -53,5 +53,9 @@ class="background-changer"
                 </div>
             </div>
         {% endfor %}
+     
+    </div>
+    <div class="apply-scholarship">
+        <a href="{% url 'scholarship' %}" class="btn btn-success btn-lg">Apply For Scholarship</a>
     </div>
 {% endblock content %}
