--- a/bootcamp/templates/bootcamp/scholarship.html
+++ b/bootcamp/templates/bootcamp/scholarship.html
@@ -1,13 +1,13 @@
 {% extends "bootcamp/base.html" %}
 {% load static %}
-{% block materialize %}
+{% block script %}
     <link
       rel="stylesheet"
-      href="{% static 'bootcamp/assets/masterialize.css' %}"
+      href="{% static 'bootcamp/assets/materialize.css' %}"
     />
 <script src="{% static 'bootcamp/assets/materialize.js' %}"></script>
 
-{% endblock materialize %}
+{% endblock script %}
 
 {% block content %}
 <div class="not-navbar">
