bug: added 404 page, refactor about page

--- a/bootcamp/templates/bootcamp/scholarship.html
+++ b/bootcamp/templates/bootcamp/scholarship.html
@@ -42,7 +42,7 @@
               </div>
               <div class="scholar-card">
                 <div class="scholar-card-img-container">
-                  <img class="scholar-card-img" src="scholarship3.png" />
+                  <img class="scholar-card-img" src="{% static 'bootcamp/assets/Shortlist.png' %}" />
                 </div>
                 <div class="scholar-card-title">Assignments</div>
                 <div class="scholar-card-desc">
