refactor: about us image changed

--- a/bootcamp/templates/bootcamp/about.html
+++ b/bootcamp/templates/bootcamp/about.html
@@ -79,16 +79,16 @@
         <div class="aboutus-bts-grid-container">
         <div class="aboutus-bts-grid">
           <div class="aboutus-bts-child">
-            <img src="{% static 'bootcamp/assets/kandacreator.jpg' %}" />
+            <img src="{% static 'bootcamp/assets/behindthescene.jpg' %}" />
           </div>
           <div class="aboutus-bts-child">
-            <img src="{% static 'bootcamp/assets/kandacreator.jpg' %}" />
+            <img src="{% static 'bootcamp/assets/behindthescene1.jpg' %}" />
           </div>
           <div class="aboutus-bts-child">
-            <img src="{% static 'bootcamp/assets/kandacreator.jpg' %}" />
+            <img src="{% static 'bootcamp/assets/behindthescene2.jpg' %}" />
           </div>
           <div class="aboutus-bts-child">
-            <img src="{% static 'bootcamp/assets/kandacreator.jpg' %}" />
+            <img src="{% static 'bootcamp/assets/behindthescene3.jpeg' %}" />
           </div>
         </div>
         </div>
@@ -96,7 +96,7 @@
           <button class="Seemore">See More on Instagram</button>
         </div>
         <div class="team">
-          <div class="AboutUs-titles">meet The Team</div>
+          <div class="AboutUs-titles">Meet The Team</div>
           <div class="team-grid">
             {% for team in teams %}
                 <div class="team-grid-child">
