bug:  line breaks in about us

--- a/bootcamp/templates/bootcamp/about.html
+++ b/bootcamp/templates/bootcamp/about.html
@@ -71,7 +71,7 @@
       <div class="AboutUs-title">About Us</div>
       <div class="aboutus-text-container-main">
         <div class="aboutus-text-container">
-          <p>{{about_content.description}}</p>
+          <p>{{about_content.description|safe}}</p>
         </div>
       </div>
       <div class="aboutus-grids-container">
