--- a/bootcamp/templates/bootcamp/courses.html
+++ b/bootcamp/templates/bootcamp/courses.html
@@ -56,6 +56,6 @@ class="background-changer"
      
     </div>
     <div class="apply-scholarship">
-        <a href="{% url 'scholarship' %}" class="btn btn-success btn-lg">Apply For Scholarship</a>
+        <a href="{% url 'scholarship' %}" class="btn btn-primary btn-lg">Apply For Scholarship</a>
     </div>
 {% endblock content %}
