--- a/bootcamp/templates/bootcamp/scholarship.html
+++ b/bootcamp/templates/bootcamp/scholarship.html
@@ -80,7 +80,7 @@
                 <label for="link">Link of projects you have done *</label>
               </div>
             </div>
-            <div class="scholarship-form-content">
+            <div class="scholarship-form-content" style="padding:0px;">
               <div class="input-field form-content">
                 <input id="why" {% if reason %} value="{{reason}}" {% endif %} type="text" name="reason" required class="validate" />
                 <label for="why"
@@ -89,7 +89,7 @@
               </div>
             </div>
 
-            <div class="scholarship-form-content">
+            <div class="scholarship-form-content" style="padding:0px;">
               <div class="input-field form-content">
                 <input id="contribute" {% if planToContribute %} value="{{planToContribute}}" {% endif %} name="planToContribute" required type="text" class="validate" />
                 <label for="contribute"
