bug: link to medium added

--- a/bootcamp/templates/bootcamp/mentors.html
+++ b/bootcamp/templates/bootcamp/mentors.html
@@ -248,6 +248,7 @@
           Read our mentors' published articles on Medium
         </div>
         <div class="blog-grid">
+          <a href="https://medium.com/incwell-bootcamp/declaring-variables-in-kotlin-64d6261144ae" target="_blank">
           <div class="blog-grid-child">
             <div class="blog-img-container">
               <img src="{% static 'bootcamp/assets/kotlin.png' %}">
@@ -257,6 +258,8 @@
               </div>
             </div>
           </div>
+          </a>
+          <a href="https://medium.com/incwell-bootcamp/mutable-vs-immutable-ff86845f5879" target="_blank">
           <div class="blog-grid-child">
             <div class="blog-img-container">
               <img src="{% static 'bootcamp/assets/Mutable.png' %}">
@@ -266,6 +269,8 @@
                 </div>
             </div>
           </div>
+          </a>
+          <a href="https://medium.com/incwell-bootcamp/how-we-made-the-intro-video-for-bootcamp-96569e746c20" target="_blank">
           <div class="blog-grid-child">
             <div class="blog-img-container">
               <img src="{% static 'bootcamp/assets/Video.png' %}">
@@ -275,6 +280,7 @@
                 </div>
             </div>
           </div>
+          </a>
         </div>
       </div>
 {% endblock content %}
