--- a/bootcamp/templates/bootcamp/mentors.html
+++ b/bootcamp/templates/bootcamp/mentors.html
@@ -51,6 +51,7 @@
           </div>
         </div>
       </div>
+      
       <div class="mentors-carousel">
         <div class="mentors-title">
           Mentors
@@ -65,53 +66,7 @@
               <li data-target="#myCarousel" data-slide-to="{{forloop.counter}}">{{category}}</li>
             {% endfor %}
           </ol>
-
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner">
-            <div class="item active">
-              <div class="mentor-grid-display">
-                
-              {% for mentor in mentors_all %}
-                <div class="mentor-grid-child">
-                  <div class="mentor-image-container">
-                    <img src="{% static mentor.image %}" data-toggle="modal"
-            data-target="#myModal{{mentor.id}}"/>
-                  </div>
-                  <div class="mentor-description">
-                    <div class="mentor-description-name">{{mentor.firstName}} {{mentor.lastName}}</div>
-                    <div class="mentor-description-title">{{mentor.designation}}</div>
-                    <div class="social">
-                      <ul>
-                        <a href="https://www.facebook.com/{{mentor.facebook}}" target="_blank">
-                        <li class="social-main">
-                          <i class="fa fa-facebook icon-facebook"></i>
-                        </li>
-                        </a>
-                        <a href="https://www.medium.com/@{{mentor.medium}}" target="_blank">
-                          <li class="social-main">
-                            <span class="icon-medium" style="text-weight:bold;font-family:Times New Roman;">M</span>
-                          </li>
-                        </a>
-                        <a href="https://www.twitter/{{mentor.twitter}}" target="_blank">
-                          <li class="social-main">
-                            <i class="fa fa-twitter icon-twitter"></i>
-                          </li>
-                        </a>
-                        <a href="https://www.linkedin.com/{{mentor.linkedIn}}" target="_blank">
-                          <li class="social-main">
-                            <i class="fa fa-linkedin icon-linkedin"></i>
-                          </li>
-                        </a>
-                        <a href="https://github.com/{{mentor.github}}" target="_blank">
-                          <li class="social-main">
-                            <i class="fa fa-github icon-github"></i>
-                          </li>
-                        </a>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-
+          {% for mentor in mentors_all %}
                 <div id="myModal{{mentor.id}}" class="modal fade" role="dialog">
                     <div class="modal-dialog">
                       <!-- Modal content-->
@@ -177,7 +132,57 @@
                         </div>
                       </div>
                     </div>
-        </div>
+                </div>
+              {% endfor %}
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner-wrapper">
+          <div class="carousel-inner">
+            <div class="item active">
+              <div class="mentor-grid-display">
+              
+                
+              {% for mentor in mentors_all %}
+                <div class="mentor-grid-child">
+                  <div class="mentor-image-container">
+                    <img src="{% static mentor.image %}" data-toggle="modal"
+            data-target="#myModal{{mentor.id}}"/>
+                  </div>
+                  <div class="mentor-description">
+                    <div class="mentor-description-name">{{mentor.firstName}} {{mentor.lastName}}</div>
+                    <div class="mentor-description-title">{{mentor.designation}}</div>
+                    <div class="social">
+                      <ul>
+                        <a href="https://www.facebook.com/{{mentor.facebook}}" target="_blank">
+                        <li class="social-main">
+                          <i class="fa fa-facebook icon-facebook"></i>
+                        </li>
+                        </a>
+                        <a href="https://www.medium.com/@{{mentor.medium}}" target="_blank">
+                          <li class="social-main">
+                            <span class="icon-medium" style="text-weight:bold;font-family:Times New Roman;">M</span>
+                          </li>
+                        </a>
+                        <a href="https://www.twitter/{{mentor.twitter}}" target="_blank">
+                          <li class="social-main">
+                            <i class="fa fa-twitter icon-twitter"></i>
+                          </li>
+                        </a>
+                        <a href="https://www.linkedin.com/{{mentor.linkedIn}}" target="_blank">
+                          <li class="social-main">
+                            <i class="fa fa-linkedin icon-linkedin"></i>
+                          </li>
+                        </a>
+                        <a href="https://github.com/{{mentor.github}}" target="_blank">
+                          <li class="social-main">
+                            <i class="fa fa-github icon-github"></i>
+                          </li>
+                        </a>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
+                
               {% endfor %}
               </div>
             </div>
@@ -232,17 +237,18 @@
 
                         
                   {% endif %}
-                     
+                    
                 {% endfor %}
-                 </div>
+                </div>
                           </div>
             {% endfor %}
             <!-- Comment End-->
 
           </div>
-          
+          </div>
         </div>
       </div>
+      
       <div class="blog-container">
         <div class="blog-title">
           Read our mentors' published articles on Medium
