--- a/bootcamp/templates/bootcamp/contact.html
+++ b/bootcamp/templates/bootcamp/contact.html
@@ -47,7 +47,7 @@
               </div>
               <div class="form-row3">
                 <div class="input-field form-content">
-                  <input id="skype_id" {% if skype_id %} value="{{skype_id}}" {% endif %} name="skype_id" type="text" class="validate" />
+                  <input id="skype" {% if skype_id %} value="{{skype_id}}" {% endif %} name="skype_id" type="text" class="validate" />
                   <label for="skype">SkypeId *</label>
                 </div>
               </div>
