--- a/bootcamp/templates/bootcamp/courses.html
+++ b/bootcamp/templates/bootcamp/courses.html
@@ -2,13 +2,13 @@
 {% load static %}
 
 {% block course-container %}
-class="background-changer"
+class="body-maker"
 {% endblock course-container %}
 
 {% block courses %}
 <div class="static-back">
     <div class="grayish"></div>
-    <div class="whiter"></div>
+    <div class="whitemaker"></div>
 </div>
 <div class="image-bg-mentors">
       <div class="bg-image-container">
@@ -23,7 +23,7 @@ class="background-changer"
 {% endblock courses %}
 
 {% block content %}
-<div class="title-courses">Courses</div>
+<div class="AboutUs-title">Courses</div>
     <div class="grid-maker-course">
         {% for course in courses %}
             <div class="box-courses">
